+base communication with mobile app

--- a/web/index.html
+++ b/web/index.html
@@ -6,14 +6,14 @@
         <title>shadertoy mobile editor</title>
         <script  type="text/javascript" src="main.js"></script>
         <script  type="text/javascript" src="application.js"></script>
-
+        <script  type="text/javascript" src="socketclient.js"></script>
     </head>
     <body>
         <h1>Shadertoy Mobile Editor</h1>
 
         <div>
-        <input type = "text" name = "mobile_ip"/>
-        <input type = "text" name = "mobile_port"/>
+        <input type = "text" id = "mobile_ip"/>
+        <input type = "text" id = "mobile_port"/>
         <button id = "connect">connect mobile</button>
         </div>
 
