+send binary data test OK

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,12 @@
         </div>
 
         <div>
-            <textarea id = "remote_messsage">Fragment Code</textarea>
+            <textarea id = "shader_code">Fragment Code</textarea>
+            <br/>
+            <input type="file" id = "img_1"/>
+            <input type="file" id = "img_2"/>
+            <input type="file" id = "img_3"/>        
+            <br/>                
             <button id = "submit">submit shader</button>
         </div>
 
